# ChangeLog for app-office/libreoffice
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/ChangeLog,v 1.302 2012/05/05 10:30:08 scarabeus Exp $

  05 May 2012; Tomáš Chvátal <scarabeus@gentoo.org> libreoffice-9999-r2.ebuild:
  Require beanshel/rhino only when building the specified extensions.

  05 May 2012; Tomáš Chvátal <scarabeus@gentoo.org> libreoffice-9999-r2.ebuild:
  Update comment about ct2n.

  04 May 2012; Tomáš Chvátal <scarabeus@gentoo.org> libreoffice-9999-r2.ebuild:
  Fix typo.

  04 May 2012; Tomáš Chvátal <scarabeus@gentoo.org> libreoffice-9999-r2.ebuild:
  Introduce libreoffice_extensions use expand.

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> libreoffice-3.5.2.2.ebuild,
  libreoffice-3.5.3.2.ebuild, libreoffice-3.5.9999.ebuild,
  libreoffice-9999-r2.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  30 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  +files/libreoffice-3.5.3-svtools-includes.patch, libreoffice-3.5.3.2.ebuild:
  Fix missing include. Fixes bug#413777.

  30 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org> libreoffice-3.5.2.2.ebuild,
  libreoffice-3.5.3.2.ebuild, libreoffice-3.5.9999.ebuild,
  libreoffice-9999-r2.ebuild:
  Fix missing dependency on libXt, it is used by nsplugin at least. Fixes
  bug#414089. Thanks to dev-zero for the bugreport.

  30 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org> libreoffice-9999-r2.ebuild,
  metadata.xml:
  Add new variable to pass makeopts.

  29 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  -files/libreoffice-3.6-clucene-remove-wrong-check.patch,
  libreoffice-9999-r2.ebuild:
  Remove no longer needed clucene patching.

  26 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org> libreoffice-9999-r2.ebuild:
  Drop removed option.

  26 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org> libreoffice-3.5.2.2.ebuild,
  libreoffice-3.5.3.2.ebuild, libreoffice-3.5.9999.ebuild:
  Restrict smoketest on 3.5 branch.
