@@ -24,24 +24,24 @@ DIST libreoffice-core-3.5.2.2.tar.xz 103296172 RMD160 8e1b87e2ea35683ee31e0a2b20
 DIST libreoffice-core-3.5.3.2.tar.xz 103327220 RMD160 cb084b763e6a8136ab23f368b7fc44a911ee2744 SHA1 33bdaec948367c5b06c2b6a7c39ceaa865abe28d SHA256 182a1dadbf4ed7dc758466aa4f1c2ee79dbc57d65ba94872fa6aaeef3f3847ad
 EBUILD libreoffice-3.5.2.2.ebuild 14796 RMD160 50e705b52d06cbe7e2aa820fbafd8cbe56997d7a SHA1 c0130bdd1cd67d9d60a285ff2842581952d6eb24 SHA256 69394c1cf5045771069a2cd2fcbb0b2e64127b57ae637447364f53947db5033f
 EBUILD libreoffice-3.5.3.2.ebuild 14713 RMD160 69113220913112ad2991ac8d11b6430709b2b533 SHA1 c39c772b87a65eafa21268d6a02265fefce7d6c9 SHA256 897b78d4873db482cea569f967c9c5620044ca4e36a2bac627135a55d2d039b6
-EBUILD libreoffice-3.5.9999.ebuild 14665 RMD160 227053689e5e09609296e25c6a65001521c381eb SHA1 ed06299be8847246224cdbf3f97bcf1e5771f1b6 SHA256 b2d1ce38aa880115c03e787916c415758a1ff1950b28c934fda7968bc4b62484
-EBUILD libreoffice-9999-r2.ebuild 15412 RMD160 87737fa6ea13cd90ca68d2c07a628e68275dd9a4 SHA1 f75d169c57cf19d07a9bb8105f45a62679594d6a SHA256 3ede838d03381472f247c2e3f455f7df05e66f9280bf36241c2a3937c504e206
-MISC ChangeLog 56292 RMD160 88fc3dc55c625dd3a15d73ff9b8c10c9646b7103 SHA1 d9df3e8dd45ae69f85d7c01b4ecbedf76c59d501 SHA256 6d88cb6405c0bd66c934b749e3c1385a1b084362303eaa7a4ab09f6412cb12c4
+EBUILD libreoffice-3.5.9999.ebuild 15227 RMD160 d2d899c2d2016d64d64bee9135dbf4c1b7d1947b SHA1 bbf9ba1d42ac09045b11c395129ddbe4608bb955 SHA256 28afcaabc0080ea25eaf553543a54f9d1b81b557f7828189091a03829767d0fe
+EBUILD libreoffice-9999-r2.ebuild 16090 RMD160 8764ede7f41720e1103f2672a18c0dddf2bae116 SHA1 53658d0713b9539d4cd96ee9792dbb95e6a5ff52 SHA256 f75235a6361915aa9d7b21f9570c0208426419e8905687c203103a5bd1a5e08f
+MISC ChangeLog 56486 RMD160 a8def2cd165b29004fbd356b6c7ca0f2c832d256 SHA1 6f783beb3a37c85aa493b0fb3527aa12a899ab61 SHA256 68f9f6218098188a8f9b5927d48c535534a6f29ba279666c670c26f3f612e9f0
 MISC metadata.xml 1421 RMD160 a0e0f80b284843de1d2dcdb3b5f8031cd564fe9a SHA1 6bf23b009c940cfbe05d28ca6fad31abfb7a5040 SHA256 74eaaa0c786765c327bbd8dfa8a5ad51b044e050717f8a6311f71e773ade1936
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQIcBAEBAgAGBQJPpQE2AAoJEOSiRoyO7jvoYSoP/3HSile5bnEiifgPRahnTggt
-bLy8Ph8okPJ+C83I9xeufApHpyca5T4pcbS8V+oWX01PR9ahcmxtBb+otQ5d74AU
-HyrQQ9gUxmE0Aqvo0UCz3YbbrTU+Vef2+Ga17Gy29UnTqT9odescLV5qYtC2tRfl
-8JZz5/2fj+P+xPqGktYGIhCW9wadO9AYE4tTLfeGv1FcMkmwUUUJ0yq8O6sE9bPD
-bVIMV3xkFewbqXgUo6PBl2WVuo2QjeDrQIat/wK2ZmXEopLlmqOpeZ5Dais65w2i
-3rzUXNkjqyJLxzgdrrWgVBgluY3KhTPwUHYpoAk3wkZvBCg5kiXnJZxY5Xj9Xnkw
-CJYSVUU0m7pAHN6gdBKOwJ0vWjHK1Bq9fT0n+C3q3Cxz+842woABcrmx4ULQTKQj
-LAYKa8PQGuaPj6B+pr7Q93ePPUcz4BrcRoIhYs3k5ZerUPLckdS4EFvQ6PJL1nSw
-gB36V+8Kp5PfE28OgT5Nj/EQiyBwotyur18BuZ3grKUjoDvRF++DWR+2C/7a7jBa
-5BD9x39shT8+YWh6JeuqZmZwkx2St9FYwfXyGZT6KZ6kh1ppxckmI0jB6g7SFayo
-aMtZPCUwePUSPf0ss9ujQxWWkyk2ThXtAR9mAAorrjVIGQiqkrxtMCXQLoTMeLqw
-u/7ASx66/N0Ojdr+fN4C
-=rwUS
+iQIcBAEBAgAGBQJPpTm5AAoJEOSiRoyO7jvoKuQP+gMt525bDIPf8ZPuhOVISmNv
+//zl5hAN/5RwWhxZkxU2+DrKQ8GbVfixb7c5yyEWsKxsS9HRoqZPK0X3jCr6E1Uu
+/qFBFoQNU4/obsov2K9Gie76QE7cUredu6aHBlllPSeiGW7UmvGB0e1Q4cQX5MzS
+5NGm2GoFtNDwYT4ji+C9JdTiZhr7BY04MmHvLxWLg/skq+pDzMq6PUa/tySJu1ub
+Ew6oMlM3dcFvcWrcLFysTb7Jv0ZthhPKhYAw141yIBUyR4mAU1+2pwQlKDymZnUf
+9ieb1MgUL35+ZeqUJNcT3Z1ddsd2aYcn9w03+bryhcvo2ZzSdL4b2LunwfGFLhkN
+5oGjCEw52iVaOOFf+qtcGdc53Poy8UhKLXJavE1izooxklIcy2GlKBB1De/yFYku
+6BglFqNoLl9+Ygi8OEek4kv47so93+4k3tlfzL5GzCv9y3bPCxunTGuz64G0uH4a
+e0GkX61o54ivkcU9tN8dpat8QmA5kEG14TZKrnpt4WnF3eZ0QvgJTNmi3ju+L6iH
+K53z3bLgTqMjePJkWOPPyf/YFVGlqxN6FfK2B5hsZkjWxf9Lt1enoOA1Y+URIoCx
+ESXYbcYn3XjndVrwOyHREQh7E+qqIhfMUHGxPZS4gezb40SZA8rhL/OWDUdltlNZ
+KmBop9JWWwmpJ+Yo3ZSw
+=7ZtE
 -----END PGP SIGNATURE-----
