@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/libreoffice-9999-r2.ebuild,v 1.63 2012/05/05 10:30:08 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/libreoffice-9999-r2.ebuild,v 1.64 2012/05/05 14:31:15 scarabeus Exp $
 
 EAPI=4
 
@@ -37,7 +37,8 @@ SRC_URI="branding? ( http://dev.gentooexperimental.org/~scarabeus/${BRANDING} )"
 
 # Split modules following git/tarballs
 # Core MUST be first!
-MODULES="core binfilter"
+# Help is used for the image generator
+MODULES="core binfilter help"
 # Only release has the tarballs
 if [[ ${PV} != *9999* ]]; then
 	for i in ${DEV_URI}; do
@@ -486,6 +487,22 @@ src_configure() {
 }
 
 src_compile() {
+	# hack for offlinehelp, this needs fixing upstream at some point
+	# it is broken because we send --without-help
+	# https://bugs.freedesktop.org/show_bug.cgi?id=46506
+	(
+		source "${S}/config_host.mk" 2&> /dev/null
+
+		local path="${SOLARVER}/${INPATH}/res/img"
+		mkdir -p "${path}" || die
+
+		echo "perl \"${S}/helpcontent2/helpers/create_ilst.pl\" -dir=icon-themes/galaxy/res/helpimg > \"${path}/helpimg.ilst\""
+		perl "${S}/helpcontent2/helpers/create_ilst.pl" \
+			-dir=icon-themes/galaxy/res/helpimg \
+			> "${path}/helpimg.ilst"
+		[[ -s "${path}/helpimg.ilst" ]] || ewarn "The help images list is empty, something is fishy, report a bug."
+	)
+
 	# this is not a proper make script
 	make build || die
 }
@@ -517,7 +534,7 @@ src_install() {
 	# It is broken because we send --without-help
 	# https://bugs.freedesktop.org/show_bug.cgi?id=46506
 	insinto /usr/$(get_libdir)/libreoffice/help
-	doins xmlhelp/util/main_transform.xsl
+	doins xmlhelp/util/*.xsl
 }
 
 pkg_preinst() {
