@@ -1,6 +1,10 @@
 # ChangeLog for app-office/libreoffice
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/ChangeLog,v 1.302 2012/05/05 10:30:08 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/ChangeLog,v 1.303 2012/05/05 14:31:15 scarabeus Exp $
+
+  05 May 2012; Tomáš Chvátal <scarabeus@gentoo.org> libreoffice-3.5.9999.ebuild,
+  libreoffice-9999-r2.ebuild:
+  Distribute help images wrt offlinehelp. Thanks to geki and his work on this.
 
   05 May 2012; Tomáš Chvátal <scarabeus@gentoo.org> libreoffice-9999-r2.ebuild:
   Require beanshel/rhino only when building the specified extensions.
